# ooi-hyd-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  prefect.yaml  pyproject.toml  requirements.txt
metadata/attributes/: globalAttributes.yaml  globalAttributes_placeholder.yaml  variableAttributes_placeholder.yaml
metadata/cals/: CE02SHBP-LJ01D-11-HYDBBA106_1.nc  CE02SHBP-LJ01D-11-HYDBBA106_10.nc  CE02SHBP-LJ01D-11-HYDBBA106_11.nc  CE02SHBP-LJ01D-11-HYDBBA106_2.nc  CE02SHBP-LJ01D-11-HYDBBA106_3.nc  CE02SHBP-LJ01D-11-HYDBBA106_5.nc  CE02SHBP-LJ01D-11-HYDBBA106_6.nc  CE02SHBP-LJ01D-11-HYDBBA106_7.nc  CE02SHBP-LJ01D-11-HYDBBA106_8.nc  CE04OSBP-LJ01C-11-HYDBBA105_12.nc  CE04OSBP-LJ01C-11-HYDBBA105_3.nc  CE04OSBP-LJ01C-11-HYDBBA105_5.nc  CE04OSBP-LJ01C-11-HYDBBA105_7.nc  CE04OSBP-LJ01C-11-HYDBBA105_9.nc  README.md  RS01SBPS-PC01A-08-HYDBBA103_12.nc  RS01SLBS-LJ01A-09-HYDBBA102_1.nc  RS01SLBS-LJ01A-09-HYDBBA102_4.nc  RS01SLBS-LJ01A-09-HYDBBA102_5.nc  RS01SLBS-LJ01A-09-HYDBBA102_6.nc  RS03AXBS-LJ03A-09-HYDBBA302_1.nc  RS03AXBS-LJ03A-09-HYDBBA302_3.nc  RS03AXBS-LJ03A-09-HYDBBA302_4.nc  RS03AXBS-LJ03A-09-HYDBBA302_5.nc  RS03AXPS-PC03A-08-HYDBBA303_11.nc  test_cal.nc
metadata/rca_correction_cals/: CE02SHBP-LJ01D-11-HYDBBA106_1.nc  CE02SHBP-LJ01D-11-HYDBBA106_10.nc  CE02SHBP-LJ01D-11-HYDBBA106_11.nc  CE02SHBP-LJ01D-11-HYDBBA106_2.nc  CE02SHBP-LJ01D-11-HYDBBA106_5.nc  CE02SHBP-LJ01D-11-HYDBBA106_7.nc  CE02SHBP-LJ01D-11-HYDBBA106_8.nc  CE04OSBP-LJ01C-11-HYDBBA105_1.nc  CE04OSBP-LJ01C-11-HYDBBA105_5.nc  CE04OSBP-LJ01C-11-HYDBBA105_7.nc  CE04OSBP-LJ01C-11-HYDBBA105_8.nc  CE04OSBP-LJ01C-11-HYDBBA105_9.nc  README.md  RS01SBPS-PC01A-08-HYDBBA103_12.nc  RS01SLBS-LJ01A-09-HYDBBA102_1.nc  RS01SLBS-LJ01A-09-HYDBBA102_2.nc  RS01SLBS-LJ01A-09-HYDBBA102_5.nc  RS01SLBS-LJ01A-09-HYDBBA102_6.nc  RS03AXBS-LJ03A-09-HYDBBA302_1.nc  RS03AXBS-LJ03A-09-HYDBBA302_2.nc  RS03AXBS-LJ03A-09-HYDBBA302_3.nc  RS03AXBS-LJ03A-09-HYDBBA302_4.nc  RS03AXPS-PC03A-08-HYDBBA303_11.nc
notebooks/: 02_pbp_pipeline_OOI_icListen_POC.ipynb  03_PARSE_CAL_TO_NC.ipynb  03_cal_to_nc_draft.ipynb  04_sync_example.ipynb  05_deployment_scratch.ipynb  06_cal_scale_correction.ipynb  07_256khz_testing_analysis.ipynb  08_LFHYD_poc.ipynb  09_LFHYD_pipeline.ipynb  10_hyd_data_availability.ipynb  58b_OOI_processing_spectrogram_w_s3_upload.ipynb  64_flac_wav_dataformats.ipynb  README.md  WAV_processing_forOceanSonics.ipynb  requirements.txt
notebooks/.ipynb_checkpoints/: mseed_to_wav_to_flac_CI_POC-checkpoint.ipynb
ooi_hyd_tools/: audio_to_spec.py  cloud.py  low_freq.py  mseed_to_audio.py  pipeline.py  seismometer.py  utils.py
ooi_hyd_tools/config/: config.yaml  obs_config.yaml
scripts/: mseed_to_wav_to_flac_CI_POC.py  ooi_mseed_to_wav.py
