[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ooi-hyd-tools"
version = "1.3.0"
description = "Tools and scripts for working with OOI hydrophone data"
requires-python = ">=3.11"
dependencies = [
    "fsspec>2024.10.0",
    "s3fs>2024.6.0",
    "numpy>2",
    "soundfile==0.12.1",
    "tqdm",
    "obspy>1.4.2",
    "jupyter",
    "loguru",
    "click",
    "matplotlib",
    "pydantic>2",
    "prefect>2",
    "polars",
    "mbari-pbp @ git+https://git@github.com/jdduprey/pbp.git@ooi-qaqc",
    #"mbari-pbp @ git+https://github.com/mbari-org/pbp.git@main"

]

[project.scripts]
acoustic-pipeline = "ooi_hyd_tools.pipeline:run_acoustic_pipeline"

[tool.hatch.build.targets.wheel]
packages = ["ooi_hyd_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 95
exclude = ["notebooks"]