[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ooi-hyd-tools"
version = "1.4.1"
description = "Tools and scripts for working with OOI hydrophone data"
requires-python = ">=3.10"
dependencies = [
    "fsspec>2024.10.0",
    "s3fs>2024.6.0",
    "numpy<2",
    "soundfile==0.12.1",
    "tqdm>=4.67.1",
    "obspy==1.4.1",
    "loguru>0.6.0",
    "click>=7",
    "matplotlib>3.9",
    "pydantic>2",
    "prefect<3,>=2.20",
    "polars>1.8",
    "awscli==1.33.44",
    "scipy>=1.10.0",
    "ooipy",
    "mbari-pbp @ git+https://git@github.com/jdduprey/pbp.git@ooi-qaqc",
    #"mbari-pbp @ git+https://github.com/mbari-org/pbp.git@main"

]

[project.scripts]
acoustic-pipeline = "ooi_hyd_tools.pipeline:run_acoustic_pipeline"

[tool.hatch.build.targets.wheel]
packages = ["ooi_hyd_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 95
exclude = ["notebooks"]