[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ooi-hyd-tools"
version = "1.4.2"
authors = [{ name="Joe Duprey", email="jduprey@uw.edu" }]
readme = "README.md"
description = "Tools and scripts for working with OOI hydrophone data"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "cftime>=1.6.0",
    "pandas<3.0.0,>=2.0.2",
    #"xarray==2023.8.0",
    "fsspec>2024.10.0",
    "s3fs>2024.6.0",
    "numpy<2",
    "soundfile==0.12.1",
    "tqdm>=4.67.1",
    "obspy==1.4.1",
    "loguru>0.6.0",
    "click>=7",
    "matplotlib>3.9",
    "pydantic>2",
    "prefect<3,>=2.20",
    #"netcdf4<2.0.0,>=1.6.4",
    "polars>1.8",
    "awscli==1.33.44",
    "scipy>=1.10.0",
    #"ooipy>=1.2.4", #TODO
    "mbari-pbp @ git+https://git@github.com/jdduprey/pbp.git@ooi-qaqc",
    #"mbari-pbp @ git+https://github.com/mbari-org/pbp.git@main"

]

[project.scripts]
acoustic-pipeline = "ooi_hyd_tools.pipeline:run_acoustic_pipeline"

[tool.hatch.build.targets.wheel]
packages = ["ooi_hyd_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 95
exclude = ["notebooks"]